--- a/locales/ar/common.json
+++ b/locales/ar/common.json
@@ -1,8 +1,14 @@
 {
-    "welcome": "مرحبًا بكم في تطبيق اليانصيب العالمي المصغر!",
-    "buyTicket": "شراء التذكرة",
-    "language": "اللغة",
-    "connectWallet": "ربط المحفظة",
-    "introText": "يقدم تطبيق اليانصيب العالمي المصغر نظام يانصيب شفاف وعادل للمستخدمين في جميع أنحاء العالم. في كل جولة، يتم توزيع الجوائز ورسوم المطور تلقائيًا."
-  }
-  
+  "welcome": "مرحبًا بكم في Global Lotto!",
+  "introText": "نظام يانصيب عادل وشفاف. حظًا سعيدًا!",
+  "connectWallet": "ربط المحفظة",
+  "buyTicket": "شراء التذكرة",
+  "lotto": "يانصيب عام",
+  "vipLotto": "يانصيب VIP",
+  "claim": "استلام الجائزة",
+  "rules": "القواعد",
+  "faq": "الأسئلة الشائعة",
+  "results": "النتائج",
+  "receipt": "الإيصال",
+  "language": "اللغة"
+}
